--- a/Variables.html
+++ b/Variables.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"> <title>Variables</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></Address></title>
+    <h1>Address</h1>
 </head>
 <body>
-    <p> <bAmad Thibobeaux</b> </p> 
-    <br>
-     <p> 1506 COMMERCIAL ST 
-    APT 1003 
-    SAN DIEGO,CA 
+    <Header> <h1> <b>Amad.com</b></h1></Header>
+    
+     <p> 1506 COMMERCIAL ST
+         <br>
+    APT 1003
+         <br>
+    SAN DIEGO,CA
+         <br>
     92113</p>
 </body>
+    <br>
 <number src= 2136967665 />
     
 </body>
