--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pacific Trail Resorts</title>
+    <title>Pacific Trail Resorts</title> 
+    <link Rel="stylesheet" href="pacific.css"/> 
 </head>
 <body>
     <Header><h1>Pacific Trail Resorts</h1>
@@ -12,6 +13,13 @@
         <li><a href="activities.html">Activities</a></li>
         <li><a href="reservation">Reservation</a></li></ul></Nav>
 
-        main>h2{enjoy nature in luxury}+p()
+        <main>
+            <h2>Enjoy Nature in luxury</h2>
+            <p>
+                <span class="resort">Pacific Trails Resort</span> offers a special
+                lodging experience on the California North Coast with panoramic views of 
+                the Pacific Ocean. Your stay at the Pacific Trail Resort includes a 
+                sumptuously appointed private yurt and a cooked-to-order breakfast each
+                morning.
 </body>
 </html>
